material icons over https

--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,6 +1,6 @@
 <!-- First Parralax container -->
 <div class="parallax-container">
-  <div class="parallax"><img src="assets/parra-1.jpg" class="parralax-images"></div>
+  <div class="parallax"><img src="parra-1.jpg" class="parralax-images"></div>
 </div>
 
 <!--   Services Section   -->
@@ -42,7 +42,7 @@
 
 <!-- Second Parralax container -->
 <div class="parallax-container">
-  <div class="parallax"><img src="assets/parra-2.jpg" class="parralax-images"></div>
+  <div class="parallax"><img src="parra-2.jpg" class="parralax-images"></div>
 </div>
 
 <!--   Inquire Section   -->
