--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -42,7 +42,7 @@
 
 <!-- Second Parralax container -->
 <div class="parallax-container">
-  <div class="parallax"><%= image_tag("parra-2.jpg", class: "parralax-images") %>/div>
+  <div class="parallax"><%= image_tag("parra-2.jpg", class: "parralax-images") %></div>
 </div>
 
 <!--   Inquire Section   -->
