--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
 <%= yield %>
 
 
-<footer class="page-footer">
+<footer class="page-footer" id="custom-footer">
   <div class="container">
     <div class="row">
       <div class="col l6 s12">
