--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,5 +31,8 @@
   margin-left: 10px;
 }
 
+ // ********************************  HOMEPAGE *********************************
 
- // *********************************  GLOBALS *********************************
+#parra-3 {
+  height: 100px;  
+}
