--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -84,5 +84,5 @@
 
 <!-- Third Parralax container -->
 <div class="parallax-container">
-  <div class="parallax"><%= image_tag("parra-3.jpg", class: "parralax-images") %></div>
+  <div class="parallax" id="parra-3"><%= image_tag("parra-3.jpg", class: "parralax-images") %></div>
 </div>
