centered homepage h1 and changed font

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,6 +33,11 @@
 
  // ********************************  HOMEPAGE *********************************
 
+.titles {
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
+
 #parra-3 {
-  height: 100px;  
+  height: 100px;
 }
