--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 
   <!--Import Google Icon Font-->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Righteous' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Righteous|Ubuntu' rel='stylesheet' type='text/css'>
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -24,7 +24,6 @@
       <ul class="right hide-on-med-and-down">
         <%if user_signed_in? %>
         <li><%= link_to "Invoices", invoices_path %></li>
-        <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
         <li><a href="#services">Services</a></li>
@@ -35,7 +34,6 @@
       <ul class="side-nav" id="mobile-demo">
         <%if user_signed_in? %>
         <li><%= link_to "Invoices", invoices_path %></li>
-        <li><%= link_to "Pay", new_charge_path %></li>
         <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
         <% else %>
         <li><a href="#services">Services</a></li>
