--- a/app/views/charges/new.html.erb
+++ b/app/views/charges/new.html.erb
@@ -1,3 +1,4 @@
+<!-- Not used, user getting redirected to invoice index -->
 <%= form_tag charges_path do %>
   <article>
     <% if flash[:error].present? %>
