--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -1,6 +1,8 @@
 <!-- First Parralax container -->
 <div class="parallax-container">
-  <div class="parallax"><%= image_tag("parra-1.jpg", class: "parralax-images") %></div>
+  <div class="parallax">
+    <%= image_tag("parra-1.jpg", class: "parralax-images") %>
+  </div>
 </div>
 
 <!--   Services Section   -->
@@ -42,7 +44,9 @@
 
 <!-- Second Parralax container -->
 <div class="parallax-container">
-  <div class="parallax"><%= image_tag("parra-2.jpg", class: "parralax-images") %></div>
+  <div class="parallax">
+    <%= image_tag("parra-2.jpg", class: "parralax-images") %>
+  </div>
 </div>
 
 <!--   Inquire Section   -->
@@ -84,5 +88,7 @@
 
 <!-- Third Parralax container -->
 <div class="parallax-container">
-  <div class="parallax" id="parra-3"><%= image_tag("parra-3.jpg", class: "parralax-images") %></div>
+  <div class="parallax" id="parra-3">
+    <%= image_tag("parra-3.jpg", class: "parralax-images") %>
+  </div>
 </div>
