--- a/app/views/invoices/edit.html.erb
+++ b/app/views/invoices/edit.html.erb
@@ -6,6 +6,8 @@
       <form class="col s12">
         <div class="row">
           <div class="input-field col s6">
+            <!-- TODO!!! -->
+            <!-- Update with form select options to become dynamic -->
             <%= f.select :user_id, { Mattell: 37, NBC: 38 }, :prompt => 'Client Name' %>
           </div>
           <div class="input-field col s6">
