--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -25,7 +25,7 @@
       <%= hidden_field_tag 'stripeAmount' %>
       <!-- Used to pass in invoice id into Stripe charge object -->
       <%= hidden_field_tag 'description' %>
-      <a class="waves-effect waves-light btn"><i class="material-icons left" id="pay_button">shop</i>Pay</a>
+      <a class="waves-effect waves-light btn" id="pay_button">Pay Now</a>
 
       <script>
         var handler = StripeCheckout.configure({
