user can pay from index

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,3 +41,10 @@
 #parra-3 {
   height: 100px;
 }
+
+// *****************************  INVOICE: INDEX *******************************
+
+#invoices-h3 {
+  text-align: center;
+  font-family: 'Ubuntu', sans-serif;
+}
