--- a/app/views/invoices/index.html.erb
+++ b/app/views/invoices/index.html.erb
@@ -1,6 +1,6 @@
 <div id="invoice_index">
   <div class="container">
-      <h3>Invoices</h3>
+      <h3 id="invoices-h3">Invoices</h3>
       <% if current_user[:role] == User.roles[:admin] %>
         <%= button_to 'Create new Invoice', new_invoice_path, method: :get %>
       <% end %>
@@ -20,7 +20,7 @@
           <%= form_tag charges_path, id: 'chargeForm' do %>
           <script src="https://checkout.stripe.com/checkout.js"></script>
           <b>Amount Due:</b> $<%= number_with_precision(invoice.amount_due, precision: 2) %><br>
-          <b>Status:</b> <%= yesno(invoice.status) %><br>
+          <b>Status:</b> <%= yesno(invoice.status) %><br><br>
           <% if current_user[:role] == User.roles[:admin] %>
           <%= button_to 'Edit', edit_invoice_path(invoice.id), method: :get %>
           <%= button_to 'Delete', invoice, method: :delete %>
