--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,11 @@ body {
   flex: 1 0 auto;
 }
 
+#white-text {
+  font-family: 'Righteous', cursive;
+  color: white;
+}
+
  // ********************************  HOMEPAGE *********************************
 
 .titles {
