--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,33 +16,8 @@
 
 </head>
 <body>
-  <!-- NAVBAR starts here -->
-  <nav>
-    <div class="nav-wrapper">
-      <%= link_to "RUBBER DUCKY CONSULTING", root_path, class: "brand-logo", :"data-no-turbolink" => true %>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <%if user_signed_in? %>
-        <li><%= link_to "Invoices", invoices_path %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
-        <% else %>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#inquire">Inquire</a></li>
-        <li><%= link_to "Login", new_user_session_path %></li>
-        <% end %>
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-        <%if user_signed_in? %>
-        <li><%= link_to "Invoices", invoices_path %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
-        <% else %>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#inquire>Inquire</a></li>
-        <li><%= link_to "Login", new_user_session_path %></li>
-        <% end %>
-      </ul>
-    </div>
-  </nav>
+
+<%= render 'layouts/navbar' %>
 
   <!-- start flash messages -->
       <% flash.each do |key, value| %>
