--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -64,3 +64,12 @@ body {
   text-align: center;
   font-family: 'Ubuntu', sans-serif;
 }
+
+#red_button {
+  background-color: red;
+  width: 100px;
+  text-transform: uppercase;
+  font-size: 20px;
+  text-align: center;
+  padding: 10px;
+}
