--- a/app/views/invoices/show.html.erb
+++ b/app/views/invoices/show.html.erb
@@ -33,7 +33,7 @@
       <script>
         var handler = StripeCheckout.configure({
           key: 'pk_test_fYMi4SRFR2V6BGIUqYh6Hohe',
-          image: '#',
+          image: '/assets/rubber-ducky.gif',
           locale: 'auto',
           token: function(token, args) {
             document.getElementById("stripeToken").value = token.id;
