--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -15,8 +15,8 @@
   <div class="row">
     <div class="col s12 m4">
       <div class="icon-block">
-        <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-        <h5 class="center">Speeds up development</h5>
+        <h2 class="center brown-text"><i class="material-icons">language</i></h2>
+        <h5 class="center">Web Development</h5>
 
         <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
       </div>
@@ -24,8 +24,8 @@
 
     <div class="col s12 m4">
       <div class="icon-block">
-        <h2 class="center brown-text"><i class="material-icons">group</i></h2>
-        <h5 class="center">User Experience Focused</h5>
+        <h2 class="center brown-text"><i class="material-icons">phonelink_setup</i></h2>
+        <h5 class="center">Mobile Development</h5>
 
         <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
       </div>
@@ -33,8 +33,8 @@
 
     <div class="col s12 m4">
       <div class="icon-block">
-        <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
-        <h5 class="center">Easy to work with</h5>
+        <h2 class="center brown-text"><i class="material-icons">assignment_ind</i></h2>
+        <h5 class="center">Lead Generation</h5>
 
         <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
       </div>
@@ -59,7 +59,7 @@
   <div class="row">
     <div class="col s12 m4">
       <div class="icon-block">
-        <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
+        <h2 class="center brown-text"><i class="material-icons">language</i></h2>
         <h5 class="center">Web Development</h5>
 
         <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
@@ -68,7 +68,7 @@
 
     <div class="col s12 m4">
       <div class="icon-block">
-        <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+        <h2 class="center brown-text"><i class="material-icons">phonelink_setup</i></h2>
         <h5 class="center">Mobile Development</h5>
 
         <p class="light">By utilizing elements and principles of Material Design, we were able to create a framework that incorporates components and animations that provide more feedback to users. Additionally, a single underlying responsive system across all platforms allow for a more unified user experience.</p>
@@ -77,7 +77,7 @@
 
     <div class="col s12 m4">
       <div class="icon-block">
-        <h2 class="center brown-text"><i class="material-icons">settings</i></h2>
+        <h2 class="center brown-text"><i class="material-icons">assignment_ind</i></h2>
         <h5 class="center">Lead Generation</h5>
 
         <p class="light">We have provided detailed documentation as well as specific code examples to help new users get started. We are also always open to feedback and can answer any questions a user may have about Materialize.</p>
