--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -18,7 +18,7 @@
       <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
       <% else %>
       <li><a href="#services">Services</a></li>
-      <li><a href="#inquire>Inquire</a></li>
+      <li><a href="#inquire">Inquire</a></li>
       <li><%= link_to "Login", new_user_session_path %></li>
       <% end %>
     </ul>
