--- a/app/views/layouts/charges.html.erb
+++ b/app/views/layouts/charges.html.erb
@@ -1,80 +1,38 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>RubberDuckyStore</title>
+  <title>Rubber Ducky Consulting</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => false %>
   <%= csrf_meta_tags %>
+  <%= favicon_link_tag 'rubber-ducky.ico' %>
 
   <!--Import Google Icon Font-->
-  <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href='https://fonts.googleapis.com/css?family=Righteous|Ubuntu' rel='stylesheet' type='text/css'>
 
   <!--Let browser know website is optimized for mobile-->
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 </head>
 <body>
-  <!-- NAVBAR starts here -->
-  <nav>
-    <div class="nav-wrapper">
-      <%= link_to "RDC", root_path, class: "brand-logo", :"data-no-turbolink" => true %>
-      <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
-      <ul class="right hide-on-med-and-down">
-        <%if user_signed_in? %>
-        <li><%= link_to "Invoices", invoices_path %></li>
-        <li><%= link_to "Pay", new_charge_path %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
-        <% else %>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#inquire">Inquire</a></li>
-        <li><%= link_to "Login", new_user_session_path %></li>
-        <% end %>
-      </ul>
-      <ul class="side-nav" id="mobile-demo">
-        <%if user_signed_in? %>
-        <li><%= link_to "Invoices", invoices_path %></li>
-        <li><%= link_to "Pay", new_charge_path %></li>
-        <li><%= link_to "Logout", destroy_user_session_path, :method => :delete %></li>
-        <% else %>
-        <li><a href="#services">Services</a></li>
-        <li><a href="#inquire>Inquire</a></li>
-        <li><%= link_to "Login", new_user_session_path %></li>
-        <% end %>
-      </ul>
-    </div>
-  </nav>
 
-<!-- <p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p> -->
+<%= render 'layouts/navbar' %>
 
-<%= yield %>
+  <!-- start flash messages -->
+      <% flash.each do |key, value| %>
+        <span class="alert alert-dismissible alert-<%= key %>">
+          <script type="text/javascript">
+            Materialize.toast('<%= value %>', 4000)
+          </script>
+        </span>
+      <% end %>
 
+<div id="main">
+  <%= yield %>
+</div>
 
-<footer class="page-footer">
-  <div class="container">
-    <div class="row">
-      <div class="col l6 s12">
-        <h5 class="white-text">Footer Content</h5>
-        <p class="grey-text text-lighten-4">You can use rows and columns here to organize your footer content.</p>
-      </div>
-      <div class="col l4 offset-l2 s12">
-        <h5 class="white-text">Links</h5>
-        <ul>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 1</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 2</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-          <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
-        </ul>
-      </div>
-    </div>
-  </div>
-  <div class="footer-copyright">
-    <div class="container">
-    © 2014 Copyright Text
-    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
-    </div>
-  </div>
-</footer>
+<%= render 'layouts/footer' %>
 
 </body>
 </html>
