comment ot sticky footer css

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@ $primary-color: color("light-blue", "darken-4") !default;
 #custom-footer {
   margin-top: 0px;
 }
-
+// Sticky footer
 body {
     display: flex;
     min-height: 100vh;
