--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,7 +9,7 @@
   </div>
   <div class="footer-copyright">
     <div class="container">
-    © 2016 Rubbery Ducky Consulting
+    © 2016 Rubber Ducky Consulting
     </div>
   </div>
 </footer>
